--- a/HTML_CSS_Website_Bhamini/style.css
+++ b/HTML_CSS_Website_Bhamini/style.css
@@ -71,11 +71,7 @@
    color: tomato;      
 
   }
-.boxes::after {
-  content: "";
-  clear: both;
-  display: table;
-}
+
 .box1{
   float: left;
   width: 50%;
@@ -84,7 +80,7 @@
   background-color:white;
 } 
 .box2{
-  float: left;
+  float: right;
   width: 50%;
   padding: 50px;
   height: 300px;
