--- a/232021_layout_nivetha/AboutUs/styles/index.css
+++ b/232021_layout_nivetha/AboutUs/styles/index.css
@@ -6,62 +6,112 @@
 
 #nav_bar {
   /* display: inline-block; */
+  /* height: 70%; */
   width: 100%;
 }
 
 ul {
   display: flex;
-  padding-left: 50%;
-  background-color: #1f1f1f;
+  padding-left: 59%;
+  /* background-color: #1f1f1f; */
+  /* background-color: #007fff; */
+  background-color: #3cb371;
   width: 100%;
 }
 
 li a {
   display: block;
   color: white;
-  clear: both;
   text-align: center;
-  padding: 18px 16px;
+  padding: 22px 16px;
+  font-size: 17px;
   text-decoration: none;
   width: 100px;
 }
 
 li a:hover {
   /* border-color: 1px #3f00ff; */
-  /* background-color: #d3d3d3; */
-  color: #d3d3d3;
+  background-color: #00ab66;
+  /* color: #d3d3d3; */
+  cursor: pointer;
 }
 
 li a:active {
   /* underline: 1px solid #3f00ff; */
   /* background-color: green; */
 }
-/* #logo {
-  width: 15%;
-  height: 20%;
+#logo {
+  width: 24%;
+  height: 22%;
   margin: 0;
   display: inline-block;
   cursor: pointer;
   padding-left: 0px;
-  position: absolute; */
+  position: absolute;
   /* margin-right: 15px; */
   /* margin-top: 0px; */
   /* margin-left: 5px; */
-/* } */
+}
+
+#heading {
+  display: inline-block;
+  padding-top: 120px;
+}
 
 img {
-  min-height: 300px;
+  /* min-height: 300px;
   min-width: 300px;
   max-height: 460px;
-  max-width: 460px;
-  /* height: 50%;
-  width: 50%; */
-  padding-left: 45%;
+  max-width: 460px; */
+  height: 50%;
+  width: 50%;
+}
+#image {
+  display: inline-block;
+  /* margin-top: 60px; */
+  height: 70%;
+  width: 70%;
+  padding-left: 60%;
+  /* border-color: 1px black; */
+  /* padding-bottom: 10px; */
 }
 
 h1 {
+  margin: 20px;
+}
+h2 {
   text-align: center;
   margin: 10px;
+}
+hr {
+  /* background-color: black; */
+  border-radius: 2px;
+  height: 4px;
+  /* animation: left-right 5s infinite; */
+  background: linear-gradient(to right, #fa1e0e, #ffff00, #3cb371);
+  position: relative;
+}
+
+#designedHr1 {
+  width: 100px;
+}
+#designedHr2 {
+  /* background: linear-gradient(to right, #e32636, yellow, green); */
+  width: 130px;
+}
+
+#designedHr1:hover {
+  transition: width 0.5s ease-out;
+  -webkit-transition: width 0.5s ease-out;
+  width: 100%;
+  cursor: pointer;
+}
+
+#designedHr2:hover {
+  width: 72%;
+  transition: width 0.5s ease-out;
+  -webkit-transition: width 0.5s ease-out;
+  cursor: pointer;
 }
 
 #about {
@@ -114,7 +164,8 @@ h1 {
   border-radius: 3px;
 }
 #foot {
-  background-color: #1f1f1f;
+  /* background-color: #007fff; */
+  background-color: #3cb371;
   color: white;
   padding: 10px;
 }
@@ -131,7 +182,21 @@ h1 {
   li {
     width: 100% !important;
   }
-  img {
+  /* img {
     width: 50%;
+  } */
+}
+
+@keyframes left-right {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 100%;
+    left: 0;
+  }
+  100% {
+    width: 0;
+    left: 100%;
   }
 }
